--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
+    "@tiptap/extension-image": "^2.0.0-beta.15",
     "@tiptap/extension-link": "^2.0.0-beta.19",
     "@tiptap/extension-placeholder": "^2.0.0-beta.26",
     "@tiptap/react": "^2.0.0-beta.55",
