--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "@tiptap/extension-image": "^2.0.0-beta.15",
     "@tiptap/extension-link": "^2.0.0-beta.19",
+    "@tiptap/extension-mention": "^2.0.0-beta.63",
     "@tiptap/extension-placeholder": "^2.0.0-beta.26",
     "@tiptap/react": "^2.0.0-beta.55",
     "@tiptap/starter-kit": "^2.0.0-beta.89",
@@ -18,6 +19,7 @@
     "postcss": "^8.3.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.7",
+    "tippy.js": "^6.3.1"
   }
 }
